Java 9+ runtime ClassLoader adoption.